# ipy-runlog

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/ipy_auditlog/: extension.py  logger.py
src/ipy_auditlog.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ipy_runlog/: __init__.py  config.py  extension.py  logger.py
tests/: test_extension.py  test_logger.py
