[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ipy-auditlog"
version = "0.1.0"
description = "Lightweight JSONL execution audit logging for IPython."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["ipython>=8.0"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
