[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ipy-runlog"
version = "0.1.0"
description = "Lightweight JSONL execution logging for IPython."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Hiroyuki Kuromiya", email = "contact@kromiii.info" }
]
keywords = ["ipython", "jupyter", "logging", "jsonl", "experiment", "notebook"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["ipython>=8.0"]

[project.urls]
Homepage = "https://github.com/kromiii/ipy-runlog"
Repository = "https://github.com/kromiii/ipy-runlog"
"Bug Tracker" = "https://github.com/kromiii/ipy-runlog/issues"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.0",
    "ruff>=0.15.20",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
